yarn update for security fixes
That led to this problem: https://github.com/electron/forge/issues/3506
and this problem: https://github.com/electron/forge/issues/3208
Fixing those led to changes in logger build,
which required updates in downstream code

--- a/common/logger/package.json
+++ b/common/logger/package.json
@@ -1,8 +1,8 @@
 {
   "name": "logger",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Overrides console.log|error and writes to cloudwatch logs",
-  "main": "index.js",
+  "main": "dist/logger.bundle.js",
   "scripts": {
     "test": "jest",
     "build": "webpack"
