--- a/client/package.json
+++ b/client/package.json
@@ -31,19 +31,22 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.2.0",
+    "@electron/fuses": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.2",
     "babel-jest": "^29.7.0",
     "electron": "28.1.2",
     "jest": "^29.7.0",
-    "source-map-cli": "^1.0.0"
+    "source-map-cli": "^1.0.0",
+    "vite": "^5.2.10"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.496.0",
     "@aws-sdk/client-s3": "^3.496.0",
+    "CBuffer": "^2.2.0",
     "amazon-cognito-auth-js": "^1.3.3",
     "better-sqlite3": "^9.2.2",
-    "CBuffer": "^2.2.0",
     "chart.js": "^3.9.1",
     "chartjs-adapter-dayjs-3": "^1.2.3",
     "chartjs-plugin-streaming": "^2.0.0",
